# ieee_rover

./: .gitignore  README.md
src/Slam/: README.md  package.xml  run.sh  setup.cfg  setup.py
src/Slam/Slam/: teleop_wasd.py
src/Slam/config/: controllers.yaml  gpu_lidar.yaml  slam.rviz  slam_params.yaml
src/Slam/description/: depth_camera.xacro  gazebo_control.xacro  larry.ros2_control.xacro  larry.urdf.xacro  lidar.xacro  robot.urdf.xacro  ros2_control.xacro
src/Slam/launch/: lidar_launch.py  lidar_sim_launch.py  slam_launch.py
src/differential_drive/src/: CMakeLists.txt  README.md  differential_drive_controller.xml  package.xml
src/differential_drive/src/bringup/config/: diffbot_controllers.yaml
src/differential_drive/src/bringup/launch/: diffbot.launch.py
src/differential_drive/src/description/launch/: view_robot.launch.py
src/differential_drive/src/description/ros2_control/: diffbot.ros2_control.xacro
src/differential_drive/src/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/differential_drive/src/hardware/: diffbot_system.cpp
src/differential_drive/src/hardware/include/differential_drive_controller/: diffbot_system.hpp
src/differential_drive/src/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/ieee_rover/description/: lidar.xacro  robot.urdf.xacro
src/larry_description/: CMakeLists.txt  package.xml
src/larry_description/config/: diffbot_controllers.yaml
src/larry_description/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py
src/larry_description/meshes/: part_1.stl  part_1_1.stl  part_1_1__2.stl  part_1_2.stl  part_1__2.stl  part_1__3.stl  part_1__4.stl  part_2.stl  part_2_1.stl  part_2_2.stl  part_2_3.stl  part_2__2.stl  part_2__3.stl  part_3.stl  part_3_1.stl  part_3_2.stl  part_3_3.stl  part_3__2.stl  part_3__3.stl  part_4.stl  part_4_1.stl
src/larry_description/rviz/: view_robot.rviz
src/larry_description/urdf/: config.json  larry.ros2_control.xacro  larry.urdf.xacro  larry_core.xacro  larry_wheels.xacro  params.md  robot.urdf
src/lidar/: CMakeLists.txt  README.md  package.xml  run.sh  setup.py
src/lidar/config/: gpu_lidar.yaml
src/lidar/description/: depth_camera.xacro  lidar.xacro  robot.urdf.xacro  ros2_control.xacro
src/lidar/launch/: lidar.launch.py  lidar_sim_launch.py
src/lidar/worlds/: obstacles.world  playground.sdf
